--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
 
 		
 
-		<script type="text/javascript" src="script4.js"></script>
-		<link rel="stylesheet" type="text/css" href="style2.css">
+		<script type="text/javascript" src="script.js"></script>
+		<link rel="stylesheet" type="text/css" href="style.css">
 
 
 
