--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
 		
 
-		<script type="text/javascript" src="script4.js"></script>
+		<script type="text/javascript" src="script.js"></script>
 		<link rel="stylesheet" type="text/css"  media="screen and (min-width: 1010px)" href="style.css">	
 		<link rel="stylesheet" type="text/css"  media="screen and (min-width: 0px) and (max-width:700px)"  href="small.css">
 
