--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 	<div id="resnav" style="display: none;">
 		  <button onclick="sdnav_close()" id="y"> &times;</button>
-		<div id="flipintro">	Intro </div><br>
+		<div id="flipintro">	About Las Vegas </div><br>
 		<div id="fliptdo"> 	 	Things  to do</div>
 		<div id="flipcandh"> 	Casino and hotels </div>
 	</div>
