--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	</div>
 
 	
-	<button onclick="sdnav_open()" >☰</button>
+	<button onclick="sdnav_open()" id="w">☰</button>
 
 	
 	<div id="panelintro">
