--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	</div>
 
 	
-	<button onclick="sdnav_open()" >☰</button>
+	<button onclick="sdnav_open()" >=</button>
 
 	
 	<div id="panelintro">
