--- a/index.html
+++ b/index.html
@@ -2,28 +2,21 @@
 <html>
 <head>
 	<!--Author:MEGH THAKKAR-->
-	<!--Site Version 2.0.0-->
+	<!--Site Version 3.0.0.0-->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0 , user-scalable=no">
 	<title>Las Vegas city</title>
 	<link href="https://fonts.googleapis.com/css?family=Cookie|Dancing+Script" rel="stylesheet">
 </head>
 
 <body>
-	
-
-
+	<button onclick="sdnav_open()" >☰</button>
 	<div id="resnav" style="display: none;">
-		  <button onclick="sdnav_close()" id="y"> &times;</button>
-		<div id="flipintro">	About Las Vegas </div><br>
-		<div id="fliptdo"> 	Things  to do</div>
-		<div id="flipcandh"> 	Casino and hotels </div>
+		<button onclick="sdnav_close()" id="y"> &times;</button>
+		<div id="flipintro">About Las Vegas </div><br>
+		<div id="fliptdo"> 	Things  to do</div><br>
+		<div id="flipcandh"> Casino and Hotels </div>
 	</div>
-
-	
-	<button onclick="sdnav_open()" >=</button>
-
-	
-	<div id="panelintro">
+		<div id="panelintro">
 		<h1>The City of Las Vegas </h1>
 
 		<center><img src="https://github.com/meghthakkar98/LasVegas/blob/gh-pages/image1.jpg?raw=true"></center><br>
@@ -102,9 +95,9 @@
 
 		
 
-		<script type="text/javascript" src="script.js"></script>
-		<link rel="stylesheet" type="text/css"  media="screen and (min-width: 1010px)" href="style.css">	
-		<link rel="stylesheet" type="text/css"  media="screen and (min-width: 0px) and (max-width:700px)"  href="small.css">
+		<script type="text/javascript" src="script4.js"></script>
+		<link rel="stylesheet" type="text/css"  media="screen and (min-width: 1010px)" href="style2.css">	
+		<link rel="stylesheet" type="text/css"  media="screen and (min-width: 0px) and (max-width:700px)"  href="small1.css">
 
 
 
