--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
 
 		
 
-		<script type="text/javascript" src="script4.js"></script>
-		<link rel="stylesheet" type="text/css"  media="screen and (min-width: 1010px)" href="style2.css">	
-		<link rel="stylesheet" type="text/css"  media="screen and (min-width: 0px) and (max-width:700px)"  href="small1.css">
+		<script type="text/javascript" src="script.js"></script>
+		<link rel="stylesheet" type="text/css"  media="screen and (min-width: 1010px)" href="style.css">	
+		<link rel="stylesheet" type="text/css"  media="screen and (min-width: 0px) and (max-width:700px)"  href="small.css">
 
 
 
