--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-	<button onclick="sdnav_open()" >☰</button>
+	<button onclick="sdnav_open()" >=</button>
 	<div id="resnav" style="display: none;">
 		<button onclick="sdnav_close()" id="y"> &times;</button>
 		<div id="flipintro">About Las Vegas </div><br>
