--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<!--Author:MEGH THAKKAR-->
 	<!--Site Version 3.0.0.0-->
+	<meta name="keyword" content="Las Vegas,las , vegas , lasvegas">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0 , user-scalable=no">
 	<title>Las Vegas city</title>
 	<link href="https://fonts.googleapis.com/css?family=Cookie|Dancing+Script" rel="stylesheet">
@@ -14,7 +15,8 @@
 		<button onclick="sdnav_close()" id="y"> &times;</button>
 		<div id="flipintro">About Las Vegas </div><br>
 		<div id="fliptdo"> 	Things  to do</div><br>
-		<div id="flipcandh"> Casino and Hotels </div>
+		<div id="flipcandh"> Casino and Hotels </div><br>
+		<div id="fliptrip"> Trip planning</div>
 	</div>
 		<div id="panelintro">
 		<h1>The City of Las Vegas </h1>
@@ -89,17 +91,24 @@
 
 		<center><img  src="http://wallpapercave.com/wp/MvtBAPM.jpg"></center><br>
 
-		<p id="p1">  "The best hotels like Aria Las Vegas Resort and Casino , Caesars palace Hotel and Casino , Bellagio Hotel and Casino , Wynn Las Vegas and Cosmopolitan , MGM Grand Hotel and Casino and many more..... . This is best place to make Money from your LUCk and sometimes you loose your all money tooo.Las Vegas is the Best Place for staying and enjoying your holiday!!!!!!! "</p>
+		<p id="p1">  "The best hotels like <u>Aria Las Vegas Resort and Casino </u>, Caesars palace Hotel and Casino , Bellagio Hotel and Casino , Wynn Las Vegas and Cosmopolitan , <u>MGM Grand Hotel and Casino </u>and many more..... . This is best place to make Money from your LUCk and sometimes you loose your all money tooo.Las Vegas is the Best Place for staying and enjoying your holiday!!!!!!! "</p>
 	
 	</div>
 
-		
+	<div id="paneltrip">
+		<h1>Trip Planning</h1>
+		<p> Here are best websites to book your Trip to Las Vegas<br> 
+		<a href="http://www.lostwagestours.com/?gclid=Cj0KCQjwsLTJBRCvARIsALjArDWm9gwP8j1WknCDUAnDN-tWITwEmKG7Hf3OPPKrRfdSAMfS5CFhr1kaAr0DEALw_wcB" style="color: #ffff1a;text-decoration: none">1. Tour Beaver</a><br>
+		<a href="http://www.sundancehelicopters.com/ultimate-strip-tour-experience/?gclid=Cj0KCQjwsLTJBRCvARIsALjArDWj96_z2dj589vU9PUB68liXotXs958nvjg-e7io7a-ZLX3PtGTDp0aAllGEALw_wcB" style="color: #ffff1a;text-decoration: none">2. SunDance Helicopter </a><br>
+		<a href="https://www.inspirock.com/united-states/las-vegas/trip-planner-d61747963" style="color: #ffff1a;text-decoration: none">3. InspiRock</a><br>
+		<a href="" style="color: #ffff1a;text-decoration: none">3. InspiRock</a><br>
+		</p>
+
+	</div>	
 
 		<script type="text/javascript" src="script.js"></script>
 		<link rel="stylesheet" type="text/css"  media="screen and (min-width: 1010px)" href="style.css">	
-		<link rel="stylesheet" type="text/css"  media="screen and (min-width: 0px) and (max-width:700px)"  href="small.css">
-
-
+		<link rel="stylesheet" type="text/css"  media="screen and (min-width: 0px) and (max-width:1010px)"  href="small.css">
 
 
 </body>
