--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
 		<a href="http://www.sundancehelicopters.com/ultimate-strip-tour-experience/?gclid=Cj0KCQjwsLTJBRCvARIsALjArDWj96_z2dj589vU9PUB68liXotXs958nvjg-e7io7a-ZLX3PtGTDp0aAllGEALw_wcB" style="color: #ffff1a;text-decoration: none">2. SunDance Helicopter </a><br>
 		<a href="https://www.inspirock.com/united-states/las-vegas/trip-planner-d61747963" style="color: #ffff1a;text-decoration: none">3. InspiRock</a><br>
 		</p>
-
 	</div>
-	<h1>Designed By <a href="https://github.com/meghthakkar98?tab=repositories" style="color: #ffff1a;text-decoration: none"> Megh Thakkar </a>
+	
+	<p id="p1">Designed By <a href="https://github.com/meghthakkar98?tab=repositories" style="color: #ffff1a;text-decoration: none"> Megh Thakkar </a></p>
 		<script type="text/javascript" src="script.js"></script>
 		<link rel="stylesheet" type="text/css"  media="screen and (min-width: 1010px)" href="style.css">	
 		<link rel="stylesheet" type="text/css"  media="screen and (min-width: 0px) and (max-width:1010px)"  href="small.css">
