--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 		<a href="http://www.sundancehelicopters.com/ultimate-strip-tour-experience/?gclid=Cj0KCQjwsLTJBRCvARIsALjArDWj96_z2dj589vU9PUB68liXotXs958nvjg-e7io7a-ZLX3PtGTDp0aAllGEALw_wcB" style="color: #ffff1a;text-decoration: none">2. SunDance Helicopter </a><br>
 		<a href="https://www.inspirock.com/united-states/las-vegas/trip-planner-d61747963" style="color: #ffff1a;text-decoration: none">3. InspiRock</a><br>
 		</p>
-	</div>
+	</div><br>
 	
 	<p id="p1">Designed By <a href="https://github.com/meghthakkar98?tab=repositories" style="color: #ffff1a;text-decoration: none"> Megh Thakkar </a></p>
 		<script type="text/javascript" src="script.js"></script>
