--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 		</p>
 	</div><br>
 	
-	<p id="p1">Designed By <a href="https://github.com/meghthakkar98?tab=repositories" style="color: #ffff1a;text-decoration: none"> Megh Thakkar </a></p>
+	<p id="p1">Designed By <a href="https://meghthakkar98.github.io/aboutme/" style="color: #ffff1a;text-decoration: none"> Megh Thakkar </a></p>
 		<script type="text/javascript" src="script.js"></script>
 		<link rel="stylesheet" type="text/css"  media="screen and (min-width: 1010px)" href="style.css">	
 		<link rel="stylesheet" type="text/css"  media="screen and (min-width: 0px) and (max-width:1010px)"  href="small.css">
