--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
 	<!--Author:MEGH THAKKAR-->
 	<!--Site Version 5.0.0.0-->
 	<title>LAS VEGAS CITY</title>
-	<meta name="keyword" content="Las Vegas,las , vegas , lasvegas">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0 , user-scalable=no">
-	<link href="https://fonts.googleapis.com/css?family=Cookie|Dancing+Script" rel="stylesheet">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0 , user-scalable=no">
 </head>
 <body>
 
@@ -70,7 +69,7 @@
 		</div>
 
 	</div>
-
+		<br><br><br><br><br><br>
 
 	<div class="sect sectEight"><h2>Casinos and Hotels</h2></div>
 
@@ -92,8 +91,8 @@
 		<a href="https://www.inspirock.com/united-states/las-vegas/trip-planner-d61747963" style="color: #ffff1a;text-decoration: none">3. InspiRock</a><br>
 		</p>
 
-	<link rel="stylesheet" type="text/css" media="screen and (min-width: 0px) and (max-width:1010px)" href="small.css">	
-	<link rel="stylesheet" type="text/css" media="screen and (min-width: 1010px)" href="style.css">
+	<link rel="stylesheet" type="text/css" media="screen and (min-width: 0px) and (max-width:1010px)" href="small1.css">	
+	<link rel="stylesheet" type="text/css" media="screen and (min-width: 1010px)" href="scroll.css">
 	<script type="text/javascript" src="script4.js"></script>
 
 </body>
