--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 	<!--Site Version 5.0.0.0-->
 	<title>LAS VEGAS CITY</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0 , user-scalable=no">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0 , user-scalable=no">
 </head>
 <body>
 
@@ -91,9 +90,9 @@
 		<a href="https://www.inspirock.com/united-states/las-vegas/trip-planner-d61747963" style="color: #ffff1a;text-decoration: none">3. InspiRock</a><br>
 		</p>
 
-	<link rel="stylesheet" type="text/css" media="screen and (min-width: 0px) and (max-width:1010px)" href="small1.css">	
-	<link rel="stylesheet" type="text/css" media="screen and (min-width: 1010px)" href="scroll.css">
-	<script type="text/javascript" src="script4.js"></script>
+	<link rel="stylesheet" type="text/css" media="screen and (min-width: 0px) and (max-width:1010px)" href="small.css">	
+	<link rel="stylesheet" type="text/css" media="screen and (min-width: 1010px)" href="style.css">
+	
 
 </body>
 </html>
