--- a/index.html
+++ b/index.html
@@ -89,10 +89,12 @@
 		<a href="http://www.sundancehelicopters.com/ultimate-strip-tour-experience/?gclid=Cj0KCQjwsLTJBRCvARIsALjArDWj96_z2dj589vU9PUB68liXotXs958nvjg-e7io7a-ZLX3PtGTDp0aAllGEALw_wcB" style="color: #ffff1a;text-decoration: none">2. SunDance Helicopter </a><br>
 		<a href="https://www.inspirock.com/united-states/las-vegas/trip-planner-d61747963" style="color: #ffff1a;text-decoration: none">3. InspiRock</a><br>
 		</p>
-
+<br><br><br><br>
+	<h2>Desinged by <a href="https://meghthakkar98.github.io/aboutme">MEGH THAKKAR</h2>
+	
 	<link rel="stylesheet" type="text/css" media="screen and (min-width: 0px) and (max-width:767px)" href="small.css">	
 	<link rel="stylesheet" type="text/css" media="screen and (min-width: 768px)" href="style.css">
-	
+		
 
 </body>
 </html>
