--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
 
 		<h2>Desinged by <a href="https://meghthakkar98.github.io/aboutme">MEGH THAKKAR</h2>
 
-	<link rel="stylesheet" type="text/css" media="screen and (min-width: 0px) and (max-width:767px)" href="small.css">	
-	<link rel="stylesheet" type="text/css" media="screen and (min-width: 768px)" href="style.css">
+	
+	<link rel="stylesheet" type="text/css" href="style.css">
 	
 
 
